objects/Critical_Account__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Critical Accounts</relationshipLabel>
        <relationshipName>Critical_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_items__c</fullName>
        <description>requested by Maria Preobrazhenskaya in Customer Care 2019</description>
        <inlineHelpText>This field is used for tracking the open action items for addressing the open critical account. Preference is using a numbered list with clear description of each action item with ownership assignment.</inlineHelpText>
        <label>Action items</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>if( text(Status__c) == &apos;Closed&apos;,0,  TODAY()  -  Engagement_Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blockers__c</fullName>
        <description>requested by Brian Cate in Customer Care 2019</description>
        <inlineHelpText>This field is used for identification of current list of blockers associated with the critical account and indicating if these are within Genesys control or Customer/Partner/3rd Party.</inlineHelpText>
        <label>Blockers</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Business_Value__c</fullName>
        <label>Business Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green-Calm</fullName>
                </value>
                <value>
                    <fullName>Yellow-Concerned</fullName>
                </value>
                <value>
                    <fullName>Red-Upset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Genesys Advisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Critical_Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Care_Level__c</fullName>
        <label>Care Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Care</fullName>
                </value>
                <value>
                    <fullName>Premium Care</fullName>
                </value>
                <value>
                    <fullName>Flex Care</fullName>
                </value>
                <value>
                    <fullName>PureEngage Cloud Care</fullName>
                </value>
                <value>
                    <fullName>PureCloud Care</fullName>
                </value>
                <value>
                    <fullName>PureConnect Premise</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Critical Accounts</relationshipLabel>
        <relationshipName>Critical_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Critical_Account_Assessment_Criteria__c</fullName>
        <label>Critical Account Assessment Criteria</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Customer_Deployment_Stage__c</fullName>
        <inlineHelpText>Select the corresponding value for the correlation of customer state as it pertains to the customer lifecycle. Deployment should be used for net new customer and currently in deployment. Production should be used for Critical Account situation not related</inlineHelpText>
        <label>Customer Deployment Stage </label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deployment</fullName>
                </value>
                <value>
                    <fullName>Migration</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_User_Country__c</fullName>
        <formula>Account__r.Country__r.Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement_Start_Date__c</fullName>
        <label>Engagement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Get_Well_Plan__c</fullName>
        <label>Get Well Plan</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Lessons_Learned__c</fullName>
        <description>requested by Brian Cate in Customer Care 2019</description>
        <inlineHelpText>Field should capture lessons learned from engagement of the Critical Account. List of recommendations Genesys can improve to further prevent another Critical Account from occurring.</inlineHelpText>
        <label>Lessons Learned</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Number_of_times_appearing__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of times appearing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PS_PM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PS PM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Critical_Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Premise_Cloud__c</fullName>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PureEngage Premise</fullName>
                </value>
                <value>
                    <fullName>PureEngage Cloud</fullName>
                </value>
                <value>
                    <fullName>PureConnect Premise</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud</fullName>
                </value>
                <value>
                    <fullName>PureCloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Support_Group__c</fullName>
        <label>Support Group</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PureEngage Business Applications</fullName>
                </value>
                <value>
                    <fullName>PureEngage Reporting &amp; Analytics</fullName>
                </value>
                <value>
                    <fullName>PureEngage Telephony</fullName>
                </value>
                <value>
                    <fullName>PureEngage Voice Self Service</fullName>
                </value>
                <value>
                    <fullName>PureConnect Add-on &amp; Integration Services</fullName>
                </value>
                <value>
                    <fullName>PureConnect Client &amp; Server Applications</fullName>
                </value>
                <value>
                    <fullName>PureConnect Reporting &amp; Analytics</fullName>
                </value>
                <value>
                    <fullName>PureConnect VoIP &amp; Telephony</fullName>
                </value>
                <value>
                    <fullName>CloudCare PureEngage</fullName>
                </value>
                <value>
                    <fullName>CloudCare PureCloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>text(Account__r.Support_Group__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_Status__c</fullName>
        <label>Resolution Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green-Resolved</fullName>
                </value>
                <value>
                    <fullName>Yellow-Good Progress</fullName>
                </value>
                <value>
                    <fullName>Red-Little Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLT_Member_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SLT Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Critical_Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLT_Member__c</fullName>
        <label>OLD SLT Member</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alex Boothroyd</fullName>
                </value>
                <value>
                    <fullName>Brian Bischoff</fullName>
                </value>
                <value>
                    <fullName>David Sudbey</fullName>
                </value>
                <value>
                    <fullName>Denise Govoni</fullName>
                </value>
                <value>
                    <fullName>Guillaume Lardeux</fullName>
                </value>
                <value>
                    <fullName>Lucy Norris</fullName>
                </value>
                <value>
                    <fullName>Mark Friedman</fullName>
                </value>
                <value>
                    <fullName>Mark Turner</fullName>
                </value>
                <value>
                    <fullName>Peter Graf</fullName>
                </value>
                <value>
                    <fullName>Scott Cravotta</fullName>
                </value>
                <value>
                    <fullName>Slava Zhakov</fullName>
                </value>
                <value>
                    <fullName>Tom Eggemeier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Situation_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Situation Manager</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Customer Care Manager</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Critical_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_to_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold to Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Critical Accounts (Sold to Account)</relationshipLabel>
        <relationshipName>Critical_Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_to_Country__c</fullName>
        <formula>Sold_to_Account__r.Country__r.Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold to Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Status__c</fullName>
        <label>System Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green-Acceptable</fullName>
                </value>
                <value>
                    <fullName>Yellow-Impaired</fullName>
                </value>
                <value>
                    <fullName>Red-Down</fullName>
                    <label>Red-Critical</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Why_Critical_Account__c</fullName>
        <label>Related Support Cases</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Why_Critical_Account_value__c</fullName>
        <label>Why Critical Account</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Customer Satisfaction</fullName>
                </value>
                <value>
                    <fullName>Executive Visibility</fullName>
                </value>
                <value>
                    <fullName>First of Kind Deployment</fullName>
                </value>
                <value>
                    <fullName>Genesys Responsiveness</fullName>
                </value>
                <value>
                    <fullName>On Watch</fullName>
                </value>
                <value>
                    <fullName>Product Functionality Missing/Needed</fullName>
                </value>
                <value>
                    <fullName>Referenceability</fullName>
                </value>
                <value>
                    <fullName>Revenue Impact</fullName>
                </value>
                <value>
                    <fullName>Risk of Replacement</fullName>
                </value>
                <value>
                    <fullName>Roadmap/Timeframe</fullName>
                </value>
                <value>
                    <fullName>Solution Complexity</fullName>
                </value>
                <value>
                    <fullName>Stability/Outages</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>update__c</fullName>
        <label>update</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Critical Account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Critical_Accounts</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>System_Status__c</columns>
        <columns>Business_Value__c</columns>
        <columns>Resolution_Status__c</columns>
        <columns>Situation_Manager__c</columns>
        <columns>SLT_Member__c</columns>
        <columns>Age__c</columns>
        <columns>Why_Critical_Account_value__c</columns>
        <columns>Engagement_Start_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All Open Critical Accounts</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Critical Situation Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Critical Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>